# tldw

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
docs/reviews/: PLAN-audio-extension.md  PLAN-coherence.md  PLAN-extension.md  PLAN-polish.md  PLAN.md  REVIEW.md
extension/: README.md  background.js  build-firefox.sh  content.js  manifest.firefox.json  manifest.json  options.html  options.js
src/youtube_tldr/: __init__.py  claude_client.py  cli.py  metadata.py  naming.py  proc.py  spans.py  summarize.py  textmode.py  timing.py  transcript.py  urls.py  videomode.py
src/youtube_tldw/: __init__.py  audio.py  claude_client.py  cli.py  config.py  core.py  metadata.py  naming.py  overlays.py  proc.py  server.py  spans.py  summarize.py  textmode.py  timing.py  transcript.py  urls.py  videomode.py  whisper_transcribe.py
tests/: test_audio.py  test_claude_client.py  test_cli.py  test_config.py  test_core.py  test_metadata.py  test_naming.py  test_overlays.py  test_proc.py  test_server.py  test_spans.py  test_summarize.py  test_textmode.py  test_timing.py  test_transcript.py  test_urls.py  test_videomode.py  test_whisper_transcribe.py
tests/fixtures/: auto_captions.vtt  manual.srt
